--- a/CadastroClientes.Data/CadastroClientes.Data.csproj
+++ b/CadastroClientes.Data/CadastroClientes.Data.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CadastroClientes.Domain\CadastroClientes.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
